# wddlib

./: CMakeLists.txt  README.md  make.sh  readme.txt
project/vc10/: testcase.vcxproj  testcase.vcxproj.filters  wddlib.sln  wddlib.vcxproj  wddlib.vcxproj.filters
project/vc10/connsvr/: connsvr.vcxproj  connsvr.vcxproj.filters
project/vc10/conntestsvr/: conntestsvr.vcxproj  conntestsvr.vcxproj.filters
src/connsvr/: CMakeLists.txt
src/connsvr/epollsvr/: epollsvr.cpp  epollsvr.h
src/connsvr/framework/: connsvr.conf  connsvr.cpp  connsvr.h  connsvr.proto
src/connsvr/msghandle/: MsgHandle.cpp  MsgHandle.h
src/connsvr/protocol/: protocol_connsvr.proto
src/connsvrtest/: CMakeLists.txt
src/connsvrtest/epollsvr/: epollsvr.cpp  epollsvr.h
src/connsvrtest/framework/: testconnsvr.conf  testconnsvr.cpp  testconnsvr.h  testconnsvr.pb.cc  testconnsvr.pb.h  testconnsvr.proto
src/connsvrtest/msghandle/: MsgHandle.cpp  MsgHandle.h
src/connsvrtest/protocol/: protocol_connsvr.pb.cc  protocol_connsvr.pb.h
src/util/: CMakeLists.txt  obj_pool.cpp  obj_pool.h
src/util/container/: obj_pool.cpp
src/util/coroutine/: co_swapcontext.S  comgr.cpp  comgr.h  coroutine.cpp  coroutine.h
src/util/framework/: server_app.cpp  server_app.h
src/util/log/: log.cpp  log.h  logmgr.cpp  logmgr.h
src/util/net/: buffer.cpp  buffer.h  epoll_poller.cpp  epoll_poller.h  tcp_channel.cpp  tcp_channel.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h
src/util/pbparser/: PbParser.cpp  PbParser.h  UtilProtocol.pb.cc  UtilProtocol.pb.h  UtilProtocol.proto
src/util/singleton/: Singleton.h  Singleton.hpp
src/util/timer/: lite_timer.cpp  lite_timer.h
testcase/: CMakeLists.txt  testcase_util.h
testcase/util/: main.cpp
testcase/util/container/: CMakeLists.txt  util_container_test.cpp
testcase/util/coroutine/: CMakeLists.txt  api_test.cpp  co_client.cpp  echo_server.cpp  mgr_test.cpp
testcase/util/framework/: CMakeLists.txt  framework_test.cpp  test.proto  testapp.conf
testcase/util/log/: CMakeLists.txt  util_log_test.cpp
testcase/util/net/: CMakeLists.txt  util_control_server.cpp  util_net_buffer.cpp  util_net_client.cpp  util_net_server.cpp
testcase/util/timer/: CMakeLists.txt  util_timer_test.cpp
